Marked Magnet for Removal & code fixup